# ursula

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.chaos-agent  Dockerfile.chaos-agent.dockerignore  README.md  clippy.toml  justfile  rust-toolchain.toml  ursula.toml
.github/workflows/: chaos-docker-publish.yml  chaos-helm-publish.yml  ci.yml  docker-publish.yml  dst-nightly.yml  helm-publish.yml
charts/ursula/: Chart.yaml  README.md  values.schema.json  values.yaml
charts/ursula-chaos/: Chart.yaml  README.md  values.schema.json  values.yaml
charts/ursula-chaos/templates/: _helpers.tpl  agent.yaml
charts/ursula/examples/: production-eks.yaml
charts/ursula/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  gateway-deployment.yaml  (+14 more)
crates/ursula/: Cargo.toml
crates/ursula-bench/: Cargo.toml
crates/ursula-bench/src/: backend.rs  bootstrap.rs  common.rs  fanout.rs  main.rs  multi_stream.rs
crates/ursula-config/: Cargo.toml
crates/ursula-config/src/: config.rs  human.rs  lib.rs  load.rs  preset.rs  tests.rs  validate.rs
crates/ursula-control/: Cargo.toml
crates/ursula-control/src/: command.rs  lib.rs  model.rs  state.rs  tests.rs  view.rs
crates/ursula-ctl/: Cargo.toml
crates/ursula-event-index/: Cargo.toml  README.md
crates/ursula-event-index/benches/: event_time_query.rs
crates/ursula-event-index/src/: lib.rs  main.rs  serverless.rs  source.rs
crates/ursula-event-index/tests/: persistence.rs  s3_serverless.rs  serverless.rs  source_http.rs
crates/ursula-gateway/: Cargo.toml  README.md
crates/ursula-gateway/src/: auth.rs  lib.rs  main.rs  service.rs  tests.rs
crates/ursula-http/: Cargo.toml
crates/ursula-http/src/: lib.rs
crates/ursula-http/tests/: static_cluster_cli.rs
crates/ursula-index/: Cargo.toml  README.md
crates/ursula-index/benches/: event_time_query.rs
crates/ursula-index/src/: cache.rs  catalog.rs  index.rs  lib.rs  main.rs  manifest.rs  object_store.rs  part.rs  serverless.rs  service.rs  source.rs  store.rs
crates/ursula-index/tests/: catalog.rs  index.rs  persistence.rs  s3.rs  s3_serverless.rs  serverless.rs  source_http.rs
crates/ursula-index/tests/common/: mod.rs
crates/ursula-observability/: Cargo.toml
crates/ursula-observability/benches/: span_overhead.rs
crates/ursula-observability/src/: lib.rs  serve.rs
crates/ursula-proto/: Cargo.toml  build.rs
crates/ursula-proto/proto/: durable.proto  errors.proto  snapshot.proto  types.proto
crates/ursula-proto/src/: lib.rs
crates/ursula-raft/: Cargo.toml  build.rs
crates/ursula-raft/proto/: errors.proto  raft_internal.proto  snapshot.proto  types.proto
crates/ursula-raft/src/: codec.rs  engine.rs  forward.rs  grpc.rs  lib.rs  log_store.rs  meta.rs  registry.rs  rt.rs  sim_runtime.rs  snapshot_codec.rs  state_machine.rs  telemetry.rs  tests.rs  types.rs
crates/ursula-raft/src/engine/: factory.rs  mod.rs
crates/ursula-raft/src/log_store/: file.rs  memory.rs  mod.rs
crates/ursula-runtime/: Cargo.toml
crates/ursula-runtime/benches/: append_apply.rs  atomic_padding.rs  cold_cache.rs  hot_snapshot.rs
crates/ursula-runtime/src/: admission.rs  cold_config.rs  cold_index.rs  cold_store.rs  cold_worker.rs  command.rs  core_worker.rs  engine.rs  engine_in_memory.rs  engine_wal.rs  env.rs  error.rs  group_actor.rs  journal.rs  lib.rs  metrics.rs  ops.rs  request.rs  rt.rs  runtime.rs  snapshot_store.rs  tests.rs  trace.rs
crates/ursula-runtime/src/engine/: in_memory.rs  mod.rs  wal.rs
crates/ursula-runtime/tests/: s3_cold_path.rs
crates/ursula-shard/: Cargo.toml
crates/ursula-shard/src/: lib.rs
crates/ursula-sim/: Cargo.toml
crates/ursula-sim/corpus/: schedule-smoke.json
crates/ursula-sim/src/: artifact.rs  lib.rs
crates/ursula-sim/src/madsim_harness/: cold_path.rs  dispatch.rs  faults_inner.rs  generators.rs  http.rs  introspect.rs  mod.rs  raft_scenarios.rs  rolling_restart.rs  runtime_scenarios.rs  tests.rs  trace.rs
crates/ursula-stream/: Cargo.toml
crates/ursula-stream/benches/: fixture.rs  plan_next_cold_flush.rs  plan_next_cold_flush_alloc.rs
crates/ursula-stream/src/: command.rs  integrity.rs  lib.rs  model.rs  record_index.rs  response.rs  snapshot.rs  state_machine.rs  validate.rs
crates/ursula-stream/src/state_machine/: append.rs  cold.rs  cold_gc.rs  cold_state.rs  hot_buffer.rs  lifecycle.rs  persist.rs  query.rs  registry.rs  tests.rs  ttl.rs
crates/ursula-stream/tests/: record_coordinates_reference.rs
crates/ursula-stream/tests/fixtures/: record_coordinates_http_v1.json  record_coordinates_v1.json
crates/ursula/src/: bootstrap.rs  lib.rs  otel_metrics.rs  render.rs  server.rs  tests.rs
crates/ursula/src/bootstrap/: cold_health.rs  commit_stall.rs  egress.rs  leadership.rs  mod.rs  runtime.rs  snapshot.rs  topology.rs  util.rs
crates/ursula/tests/: static_cluster_cli.rs
deploy/chaos-eks/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
deploy/eks/: .terraform.lock.hcl  README.md  backend.hcl.example  backend.tf.example  iam.tf  main.tf  outputs.tf  provision.sh  storage.tf  terraform.tfvars.example  variables.tf  versions.tf
docs/architecture/: deterministic-simulation-testing.md  dynamic-group-membership.md  json-record-coordinates-validation.md  loc-reduction-plan.md  runtime-ecosystem-evaluation.md  thread-per-core-multiraft.md
docs/migration/: cold-path-progress.md  current-cpu-plateau-analysis.md  ec2-static-cluster-s3-smoke.md  final-goal-audit.md  from-riverrun.md  official-conformance.md  perf-compare-cpu-saturation.md
docs/operations/: ec2-static-cluster.md
docs/web/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
examples/browser-telemetry/: README.md  collector.js  event-time-index.mjs  event-time-index.test.mjs
scripts/: chaos_helm_template_test.py  helm_template_test.py  ursula_chaos_agent.py  ursula_chaos_agent_test.py  ursula_chaos_faultd.py  ursula_ec2.py  ursula_ec2_test.py
scripts/dst/: audits.py  cli.py  common.py  nondeterminism_whitelist.json  reports.py  tools.py
(+105 files in other folders)
