[workspace]
members = [
    "crates/ursula-proto",
    "crates/ursula-runtime",
    "crates/ursula-raft",
    "crates/ursula",
    "crates/ursula-shard",
    "crates/ursula-stream",
    "crates/ursula-bench",
    "crates/ursula-ctl",
    "crates/ursula-sim",
]
resolver = "3"

[workspace.package]
version = "0.1.3"
edition = "2024"
license = "Apache-2.0"
authors = ["The Ursula contributors"]
repository = "https://github.com/tonbo-io/ursula"
homepage = "https://ursula.tonbo.io"
readme = "README.md"
keywords = ["durable-streams", "raft", "thread-per-core", "multi-raft"]
categories = ["database-implementations", "network-programming"]

[patch.crates-io]
openraft = { git = "https://github.com/databendlabs/openraft.git", rev = "13df5b32288b7937a293759264712b5a144987ac" }
openraft-macros = { git = "https://github.com/databendlabs/openraft.git", rev = "13df5b32288b7937a293759264712b5a144987ac" }
openraft-rt = { git = "https://github.com/databendlabs/openraft.git", rev = "13df5b32288b7937a293759264712b5a144987ac" }
openraft-rt-tokio = { git = "https://github.com/databendlabs/openraft.git", rev = "13df5b32288b7937a293759264712b5a144987ac" }

# NOTE: experimented with `lto = "fat"` and `lto = "thin"` + codegen-units = 1.
# On the c7g benchmark cluster (3 × c7g.4xlarge, 256 B append workload),
# write throughput regressed 10–13% at peak with either LTO setting - likely
# loss of icache locality on tokio's deep async call paths. Replay (large
# body, contiguous code) did benefit, but the write-path regression
# dominated. Kept default profile until we have a profile-guided build.
