[package]
name = "ursula-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Shared protobuf wire types for Ursula (stream commands, cold chunk refs, Raft RPC payloads)."

[dependencies]
prost = { workspace = true }
serde = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
protoc-bin-vendored = { workspace = true }

[lints.clippy]
wildcard_imports = "deny"
