[package]
name = "ursula-raft"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "OpenRaft adapter boundary for Ursula shard-owned durable stream groups."

[dependencies]
futures-util = "0.3"
openraft = { version = "0.10.0-alpha.20", default-features = false, features = ["tokio-rt", "type-alias", "serde"] }
prost = "0.13"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.39", features = ["macros", "rt", "rt-multi-thread"] }
tonic = { version = "0.12", features = ["transport"] }
ursula-runtime = { path = "../ursula-runtime" }
ursula-proto = { path = "../ursula-proto" }
ursula-shard = { path = "../ursula-shard" }

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = { version = "0.12", features = ["prost"] }

[dev-dependencies]
tokio = { version = "1.39", features = ["macros", "rt"] }
