[package]
name = "ursula-raft"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "OpenRaft integration for Ursula's per-group multi-Raft replication: network, log store, and snapshot transport."

[dependencies]
futures-util = { workspace = true }
openraft-rt = { workspace = true }
openraft = { workspace = true }
opentelemetry = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync"] }
tonic = { workspace = true, features = ["transport"] }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
ursula-runtime = { workspace = true }
ursula-proto = { workspace = true }
ursula-config = { workspace = true }
ursula-shard = { workspace = true }

[build-dependencies]
protoc-bin-vendored = { workspace = true }
tonic-build = { workspace = true, features = ["prost"] }

[target.'cfg(madsim)'.dependencies]
madsim = { workspace = true }
pin-project-lite = { workspace = true }
rand = { workspace = true, features = ["std", "std_rng", "thread_rng"] }
sim-tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(madsim)'] }

[lints.clippy]
wildcard_imports = "deny"
