[package]
name = "ursula-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Per-core actor runtime for Ursula: hot ring, cold-tier flush, and the replaceable group-engine boundary."

[dependencies]
bytes = { workspace = true, features = ["serde"] }
opendal = { workspace = true, features = ["services-memory", "services-s3"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
ursula-shard = { workspace = true }
ursula-stream = { workspace = true }

[target.'cfg(madsim)'.dependencies]
sim-tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }
tempfile = { workspace = true }
tracing = { workspace = true }

[[bench]]
name = "cold_cache"
harness = false

[[bench]]
name = "hot_snapshot"
harness = false

[[bench]]
name = "append_apply"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(madsim)'] }
