[package]
name = "ursula-shard"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Shard placement primitives for Ursula's thread-per-core multi-Raft runtime."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ursula-proto = { path = "../ursula-proto", version = "0.1.0" }
