[package]
name = "ursula-shard"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Shard placement primitives for Ursula's thread-per-core multi-Raft runtime."

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
ursula-proto = { workspace = true }

[lints.clippy]
wildcard_imports = "deny"
