[package]
name = "ursula-sim"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Deterministic simulation harnesses for Ursula."

[dependencies]
openraft = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
ursula-observability = { workspace = true }
ursula-raft = { workspace = true }
ursula-runtime = { workspace = true }
ursula-shard = { workspace = true }

[target.'cfg(madsim)'.dependencies]
axum = { workspace = true }
madsim = { workspace = true }
tower = { workspace = true, features = ["util"] }
ursula = { workspace = true }
ursula-ctl = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(madsim)'] }

[lints.clippy]
wildcard_imports = "deny"
