[package]
name = "ursula-stream"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Pure Durable Streams state-machine semantics for Ursula vNext."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ursula-shard = { path = "../ursula-shard", version = "0.1.0" }
ursula-proto = { path = "../ursula-proto", version = "0.1.0" }

[dev-dependencies]
serde_json = "1.0"
