[package]
name = "ursula"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Ursula deployment binary: Durable Streams server, gateway, and event-time indexer."

[features]
default = ["release-max-info"]
# Compile out trace!/debug! in release builds to keep the hot path free. Drop
# it (`--no-default-features --features tokio-console`) when using tokio-console.
release-max-info = ["ursula-observability/release-max-info"]
tokio-console = ["dep:console-subscriber", "tokio/tracing"]
jemalloc-prof = [
    "dep:tempfile",
    "dep:tikv-jemalloc-ctl",
    "dep:tikv-jemallocator",
    "tikv-jemalloc-ctl/profiling",
    "tikv-jemallocator/profiling",
    "tikv-jemallocator/unprefixed_malloc_on_supported_platforms",
]

[dependencies]
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
console-subscriber = { workspace = true, optional = true }
futures-util = { workspace = true }
mimalloc = { workspace = true }
openraft = { workspace = true }
opentelemetry = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true, optional = true }
tikv-jemalloc-ctl = { workspace = true, optional = true }
tikv-jemallocator = { workspace = true, optional = true }
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "time"] }
tonic = { workspace = true, features = ["transport"] }
tower = { workspace = true, features = ["util", "limit", "load-shed"] }
tracing = { workspace = true }
ursula-config = { workspace = true }
ursula-gateway = { workspace = true }
ursula-index = { workspace = true }
ursula-observability = { workspace = true, features = ["otlp"] }
ursula-raft = { workspace = true }
ursula-runtime = { workspace = true }
ursula-shard = { workspace = true }

[target.'cfg(madsim)'.dependencies]
madsim = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
toml = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(madsim)', 'cfg(tokio_unstable)'] }

[lints.clippy]
wildcard_imports = "deny"
